<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sbamp</name>
  <version>0.0.0</version>
  <description>Sampling Based Adaptive Motion Planning</description>
  <maintainer email="raorane@seas.upenn.edu">shreyas</maintainer>
  <maintainer email="kapuri@seas.upenn.edu">kaRpuri</maintainer>
  <maintainer email="quanpham@seas.upenn.edu">Quan</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
